projects/vb6parse/snapshots/tests/library/arrays/filter/filter_concatenation.snap
---
source: projects/vb6parse/tests/library/arrays/filter.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: levelTag
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: BinaryExpression
              children:
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"[\""
                - kind: Whitespace
                  text: " "
                - kind: Ampersand
                  text: "&"
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: UCase
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: level
                    - kind: RightParenthesis
                      text: )
            - kind: Whitespace
              text: " "
            - kind: Ampersand
              text: "&"
            - kind: Whitespace
              text: " "
            - kind: StringLiteralExpression
              children:
                - kind: StringLiteral
                  text: "\"]\""
        - kind: Newline
          text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: result
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: Filter
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: logEntries
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: levelTag
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: BooleanLiteralExpression
                      children:
                        - kind: TrueKeyword
                          text: "True"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: vbTextCompare
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
