projects/vb6parse/snapshots/tests/library/arrays/filter/filter_error_handling.snap
---
source: projects/vb6parse/tests/library/arrays/filter.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: OnErrorStatement
      children:
        - kind: OnKeyword
          text: "On"
        - kind: Whitespace
          text: " "
        - kind: ErrorKeyword
          text: Error
        - kind: Whitespace
          text: " "
        - kind: GotoKeyword
          text: GoTo
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: ErrorHandler
        - kind: Newline
          text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: filtered
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: Filter
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: sourceArray
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: searchText
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: BooleanLiteralExpression
                      children:
                        - kind: TrueKeyword
                          text: "True"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: vbTextCompare
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
    - kind: ExitStatement
      children:
        - kind: ExitKeyword
          text: Exit
        - kind: Whitespace
          text: " "
        - kind: FunctionKeyword
          text: Function
    - kind: Newline
      text: "\n"
    - kind: LabelStatement
      children:
        - kind: Identifier
          text: ErrorHandler
        - kind: ColonOperator
          text: ":"
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "    "
    - kind: ReDimStatement
      children:
        - kind: ReDimKeyword
          text: ReDim
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: filtered
        - kind: LeftParenthesis
          text: (
        - kind: NumericLiteralExpression
          children:
            - kind: IntegerLiteral
              text: "0"
        - kind: Whitespace
          text: " "
        - kind: ToKeyword
          text: To
        - kind: Whitespace
          text: " "
        - kind: UnaryExpression
          children:
            - kind: SubtractionOperator
              text: "-"
            - kind: NumericLiteralExpression
              children:
                - kind: IntegerLiteral
                  text: "1"
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
